Added loading spinner to image rotating and edited the ajax request.

--- a/resources/views/upload/index.twig
+++ b/resources/views/upload/index.twig
@@ -15,6 +15,7 @@
 
 </div>
 <script>
+    var uploadErrorMsg = "{{trans('visiosoft.field_type.media::message.error_upload')}}";
 
     var imageCount = {{ field_type.value|length < setting_value('visiosoft.module.advs::ads_image_limit')
     ? setting_value('visiosoft.module.advs::ads_image_limit') - field_type.value|length
